Finalisation du TP

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
 		<title>Team DSFJKL</title>
-		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
@@ -14,15 +13,14 @@
 		</div>
 		<div id="navbar">
 			<ul>
-				<li>Accueil</li>
-				<li>Les joueurs</li>
-				<li>Les vidéos</li>
+				<a href="index.html"><li>Accueil</li></a>
+				<a href="players.html"><li>Les joueurs</li></a>
+				<a href="videos.html"><li>Les vidéos</li></a>
 			</ul>
 		</div>
 		<div id="content">	
 			<div id="team">
 				<h2>La Team</h2>
-				<img src="" alt"" />
 				<p>La Team DSFJKL est essentiellement composée de cinq célèbres streamers :</p>
 				<ul>
 					<li>ZeratoR</li>
@@ -32,11 +30,11 @@
 					<li>Corobizar</li>
 				</ul>
 				<p>Ces streamers se retrouvent en ligne pour jouer à League of Legends et participent de temps en temps à des LAN pour le fun.</p>
-				<video src="" alt=""></video>
+				<iframe width="854" height="480" src="https://www.youtube.com/embed/VJ88la3kZOU" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div id="footer">
-			<p>Copyright (c) 2017 - TEAM DSFJKL.<br />Créé pour le fun par Gaëlle Martinage.</p>
+			<p>Copyright (c) 2017 - TEAM DSFJKL. Créé pour le fun par Gaëlle Martinage.</p>
 		</div>
 	</body>
 </html>
