--- a/players.html
+++ b/players.html
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
-		<title>Team DSFJKL - Les joueurs</title>
-		<link rel="stylesheet" href="css/reset.css">
+		<title>Les Joueurs | Team DSFJKL</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
@@ -13,6 +12,11 @@
 			<h1>Team DSFJKL</h1>
 		</div>
 		<div id="navbar">
+			<ul>
+				<a href="index.html"><li>Accueil</li></a>
+				<a href="players.html"><li>Les joueurs</li></a>
+				<a href="videos.html"><li>Les vidéos</li></a>
+			</ul>
 		</div>
 		<div id="content">
 			<div id="players">
@@ -25,33 +29,33 @@
 						<th>DFG</th>
 						<th>Corobizar</th>
 					</tr>
+						<td class="img"><img src="img/zerator.jpg" alt="Photo ZeratoR" /></td>
+						<td class="img"><img src="img/domingo.jpg" alt="Photo DominGO" /></td>
+						<td class="img"><img src="img/doigby.jpg" alt="Photo Doigby" /></td>
+						<td class="img"><img src="img/dfg.jpg" alt="Photo DFG" /></td>
+						<td class="img"><img src="img/corobizar.jpg" alt="Photo Corobizar" /></td>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+					</tr>
+					<tr>
+						<td><a href="https://www.youtube.com/user/ZeratoRSC2"><img src="img/logo_youtube.png" alt="Logo Youtube" /></a></td>
+						<td><a href="https://www.youtube.com/user/ElDom1nG0"><img src="img/logo_youtube.png" alt="Logo Youtube" /></a></td>
+						<td><a href="https://www.youtube.com/user/Doigby"><img src="img/logo_youtube.png" alt="Logo Youtube" /></a></td>
+						<td><a href="https://www.youtube.com/user/LeGamingAppart"><img src="img/logo_youtube.png" alt="Logo Youtube" /></a></td>
+						<td><a href="https://www.youtube.com/user/CorobizarOfficiel"><img src="img/logo_youtube.png" alt="Logo Youtube" /></a></td>
 					</tr>
 					<tr>
 						<td>Adrien Nougaret</td>
 						<td>Pierre-Alexis Bizot</td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Arif Akin</td>
+						<td>Alexis Rodrigues</td>
+						<td>?</td>
 					</tr>
 					<tr>
 						<td>27 ans</td>
 						<td>22 ans</td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>Montpellier</td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>25 ans</td>
+						<td>22 ans</td>
+						<td>23 ans</td>
 					</tr>
 				</table>
 			</div>
